# fessor

./: .gitignore  .google-cookie  .replit  README.md  config.py  ctx.py  custom_lint.py  deez.txt  fallback.py  keep_alive.py  lektiescanner.py  main.py  message (2).txt  poggers.txt  poopy.py  pylintrc  pyproject.toml  run.py  schedule.py  slander.py  suggestions.md  test.txt
.github/workflows/: pylint.yml
cogs/: badass.py  blacklist.py  bury.py  coinflip.py  devtools.py  info.py  lookup.py  moderation.py  modify.py  next.py  party.py  perms.py  ping.py  pl.py  poggies.py  romkugler.py  settings.py  skole.py  slander.py  snipe.py  status.py  suggest.py
commands/: ctx.py
commands/school/: lektiescanner.py
configs/: assets.ini  assets.json  birte.py  config.ini  countries.json  country_names.json  options.py  parties.json  permissions.json  settings.py
data/: README.txt  scans.json
fun/: slander.py
functions/: utils.py
functions/fun/: slander.py
functions/school/: lektieposter.py  lektiescanner.py  scanschedule.py
school/: lektieposter.py  lektiescanner.py  scanschedule.py
scraps/: control.py  nosen.py  oldperms.py  party.py
