[tool.poetry]
name = "fessor"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2021.1"
xintool = "^0.0.7"
bs4 = "^0.0.1"
"discord.py" = "^1.7.1"
dpymenus = "^1.3.1"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
